--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,8 @@ board = uno
 framework = arduino
 lib_deps = 
 	arduino-libraries/Servo@^1.2.1
-	jchristensen/movingAvg@^2.3.1
 	m-tech-creations/NoDelay@^2.1.1
+	robtillaart/RunningAverage@^0.4.3
 
 [platformio]
 description = Some simple demos with Grove EMG with better library integrations
