--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
-  "C_Cpp_Runner.cCompilerPath": "C:/Users/Xingyu_Brian_Zhou/.platformio/packages/toolchain-atmelavr@1.70300.191015/bin/avr-gcc.exe",
-  "C_Cpp_Runner.cppCompilerPath": "C:/Users/Xingyu_Brian_Zhou/.platformio/packages/toolchain-atmelavr@1.70300.191015/bin/avr-g++.exe",
-  "C_Cpp_Runner.debuggerPath": "C:/Users/Xingyu_Brian_Zhou/.platformio/packages/toolchain-atmelavr@1.70300.191015/bin/avr-gdb.exe",
-  "C_Cpp_Runner.cStandard": "gnu11",
-  "C_Cpp_Runner.cppStandard": "gnu++11",
   "C_Cpp_Runner.msvcBatchPath": "",
+  "C_Cpp_Runner.cCompilerPath": "gcc",
+  "C_Cpp_Runner.cppCompilerPath": "g++",
+  "C_Cpp_Runner.debuggerPath": "gdb",
+  "C_Cpp_Runner.cStandard": "",
+  "C_Cpp_Runner.cppStandard": "",
   "C_Cpp_Runner.useMsvc": false,
   "C_Cpp_Runner.warnings": [
     "-Wall",
@@ -37,22 +37,7 @@
   "C_Cpp_Runner.warningsAsError": false,
   "C_Cpp_Runner.compilerArgs": [],
   "C_Cpp_Runner.linkerArgs": [],
-  "C_Cpp_Runner.includePaths": [
-    "C:/Users/Xingyu_Brian_Zhou/Documents/GitHub/EMG-Workshop/include",
-    "C:/Users/Xingyu_Brian_Zhou/Documents/GitHub/EMG-Workshop/src",
-    "C:/Users/Xingyu_Brian_Zhou/Documents/GitHub/EMG-Workshop/lib/EMA_Filters",
-    "C:/Users/Xingyu_Brian_Zhou/Documents/GitHub/EMG-Workshop/.pio/libdeps/uno/RunningAverage",
-    "C:/Users/Xingyu_Brian_Zhou/Documents/GitHub/EMG-Workshop/.pio/libdeps/uno/NoDelay/src",
-    "C:/Users/Xingyu_Brian_Zhou/Documents/GitHub/EMG-Workshop/.pio/libdeps/uno/Servo/src",
-    "C:/Users/Xingyu_Brian_Zhou/.platformio/packages/framework-arduino-avr/cores/arduino",
-    "C:/Users/Xingyu_Brian_Zhou/.platformio/packages/framework-arduino-avr/variants/standard",
-    "C:/Users/Xingyu_Brian_Zhou/.platformio/packages/framework-arduino-avr/libraries/EEPROM/src",
-    "C:/Users/Xingyu_Brian_Zhou/.platformio/packages/framework-arduino-avr/libraries/HID/src",
-    "C:/Users/Xingyu_Brian_Zhou/.platformio/packages/framework-arduino-avr/libraries/SPI/src",
-    "C:/Users/Xingyu_Brian_Zhou/.platformio/packages/framework-arduino-avr/libraries/SoftwareSerial/src",
-    "C:/Users/Xingyu_Brian_Zhou/.platformio/packages/framework-arduino-avr/libraries/Wire/src",
-    ""
-  ],
+  "C_Cpp_Runner.includePaths": [],
   "C_Cpp_Runner.includeSearch": [
     "*",
     "**/*"
@@ -70,5 +55,6 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false
+  "C_Cpp_Runner.msvcSecureNoWarnings": false,
+  "cmake.configureOnOpen": false
 }
